--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -192,7 +192,7 @@ h1 {
     flex-direction: row;
     z-index: 2;
     padding: 0;
-    transform: translateY(-16%);
+    transform: translateY(-23%);
     margin-left: 3%;
     margin-right: 3%;
     list-style: none;
@@ -284,7 +284,7 @@ h1 {
 }
 
 #feats-info-container {
-    height: 30%;
+    height: 43%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -304,7 +304,9 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    /* transform: translateY(30%); */
+    /* transform: translateY(-50%); */
+    /* transition: .4s;
+    transition-delay: .2s; */
 }
 
 #feats-title p {
@@ -316,6 +318,13 @@ h1 {
     transition: .4s;
     transition-delay: .2s;
 }
+
+/* #li-flex:hover #feats-title {
+    transform: translateY(0%);
+    transition: .4s;
+    transition-delay: .2s;
+} */
+
 
 #feats-descrip {
     height: 55%;
@@ -466,15 +475,6 @@ h1 {
     opacity: 100%;
 }
 
-#feats-details:before {
-    content: '. . .';
-    position: absolute;
-}
-
-#feats-details:before {
-    content: '';
-    position: absolute;
-}
 
 
 #feats-actions {
