--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -1,3 +1,5 @@
+/* message gray: #3c3c3c */
+
 h1 {
     color: white;
 }
@@ -138,9 +140,6 @@ h1 {
     cursor: pointer;
 } */
 
-#feature-plus-btn {
-    
-}
 
 #feature-plus-btn:hover img {
     opacity: 100%;
@@ -364,6 +363,7 @@ h1 {
 
 #items {
     position: relative;
+    height: 100%;
 } 
 
 #li-flex {
@@ -498,8 +498,9 @@ h1 {
     margin-left: 3%;
     margin-right: 3%;
     display: flex;
-    align-items: flex-end;
-    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
 
 }
 
@@ -511,3 +512,95 @@ h1 {
     margin-bottom: 5%;
     margin-left: 5%;
 }
+
+#check-plus {
+    opacity: 70%;
+    transition: .3s;
+}
+
+
+
+.feats-hov-msg {
+    /* width: 74%; */
+    width: 50%;
+    
+    margin-left: 7%;
+    /* background-color: lawngreen; */
+    margin-bottom: 2%;
+    display: flex;
+    align-items: baseline;
+}
+
+.feats-hov-msg-b {
+
+    width: 68%;
+    margin-left: 7%;
+    margin-bottom: 2%;
+    display: flex;
+    align-items: baseline;
+}
+
+.msg {
+    transform: translateY(25%);
+    opacity: 0%;
+    /* transition: .5s; */
+}
+#feats-action-bar {
+    width: 100%;
+}
+
+#check-plus:hover {
+    opacity: 100%;
+    transform: scale(1.13);
+}
+
+.msg-b {
+
+    transform: translateY(25%);
+    opacity: 100%;
+    transition: .5s;
+}
+
+.notify-contain {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 70;
+    opacity: 100%;
+    transition: .5s;
+    /* transform: translateY(-100%); */
+}
+.notify-contain-a {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 70;
+    opacity: 0%;
+    transition: .5s;
+    /* transform: translateY(-100%); */
+}
+
+
+.add-notify {
+    background-color: #3c3c3c;
+    height: 10vh;
+    width: 68vw;
+    position: fixed;
+    transform: translateY(-10%);
+    /* z-index: 70; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-notify h1 {
+    font-size: 1.5vw;
+    font-family: "Graphik Web Regular";
+}
+
