--- a/app/assets/stylesheets/splash_page.css
+++ b/app/assets/stylesheets/splash_page.css
@@ -166,15 +166,15 @@
 
 
 .splash-movie-hero {
-    background-image: url(https://aqua-app-dev.s3-us-west-1.amazonaws.com/movie-hero.png);
+    background-image: url(https://aqua-app-dev.s3-us-west-1.amazonaws.com/aqua-splash-hero.jpg);
     /* height: 1000px; */
     /* background-position: center; */
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     /* background-repeat: no-repeat; */
     /* transform: translateY(3%); */
-    margin-top: 2%;
+    margin-top: 0%;
     width: 100%;
     height: 60vw;
     position: relative;
