--- a/app/assets/stylesheets/api/content_page.css
+++ b/app/assets/stylesheets/api/content_page.css
@@ -218,3 +218,88 @@
 /* .vid-link-b {
     display: none;
 } */
+
+.delete-container {
+    top: 0%;
+    width: 100%;
+    position: absolute;
+    z-index: 56;
+    display: flex;
+    align-items: flex-end;
+    pointer-events: none;
+}
+
+.delete-back-a {
+    height: 10vh;
+    width: 100%;
+    background-color: #3c3c3c;
+    position: fixed;
+    display: none;
+}
+
+.delete-back {
+    height: 10vh;
+    min-height: 70px;
+    width: 100%;
+    background-color: #0f0f0f;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.items-selected {
+    margin-left: 3.5%;
+    color: white;
+}
+
+.content-btns {
+    margin-right: 3.5%;
+    color: white;
+    display: flex;
+}
+
+#num-selected {
+    font-family: "Graphik Web Light";
+    font-size: 1.1vw;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
+}
+
+#num-selected span {
+    font-size: 2.5vw;
+    margin-right: 13%;
+    font-family: "Graphik LC TT Thin";
+}
+
+.cancel-btn {
+    height: 3.5vw;
+    min-height: 50px;
+    width: 10vw;
+    min-width: 80px;
+    border: rgba(255, 255, 255,0.5) 1.3px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Graphik Web Light";
+    font-size: 0.7vw;
+    text-transform: uppercase;
+    pointer-events: visible;
+}
+
+.cancel-btn:hover {
+    cursor: pointer;
+    border: rgba(255, 255, 255,1) 1.3px solid;
+
+}
+
+.remove-yes-btn {
+    height: 3.5vw;
+    min-height: 50px;
+    width: 10vw;
+    min-width: 80px;
+    background-color: coral;
+    margin-left: 5%;
+}
