--- a/app/assets/stylesheets/api/movies_index_items.css
+++ b/app/assets/stylesheets/api/movies_index_items.css
@@ -66,7 +66,7 @@ h1 {
     flex-direction: row;
     /* justify-content: space-between; */
     position: relative;
-    margin-top: 3%;
+    /* margin-top: 3%; */
     height: 3.15vw;
 }
 
@@ -117,6 +117,20 @@ h1 {
     text-transform: uppercase;
     font-family: "Graphik Web Regular";
     font-size: 1vw;
+}
+
+.disp-msg {
+    height: 2vw;
+    /* background-color: lawngreen; */
+    width: 100%;
+    z-index: 56;
+    position: relative;
+}
+.disp-msg {
+    
+    /* background-color: lightcoral; */
+    width: 50%;
+    transform: translateX(100%);
 }
 
 #feat-actions {
@@ -494,7 +508,6 @@ h1 {
 
 #feats-actions {
     height: 60%;
-    /* background-color: lightseagreen; */
     margin-left: 3%;
     margin-right: 3%;
     display: flex;
@@ -525,7 +538,6 @@ h1 {
     width: 50%;
     
     margin-left: 7%;
-    /* background-color: lawngreen; */
     margin-bottom: 2%;
     display: flex;
     align-items: baseline;
@@ -539,6 +551,8 @@ h1 {
     display: flex;
     align-items: baseline;
 }
+
+
 
 .msg {
     transform: translateY(25%);
@@ -568,22 +582,26 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    z-index: 70;
+    z-index: 2;
     opacity: 100%;
     transition: .5s;
+    top: 0%;
+    pointer-events: none;
     /* transform: translateY(-100%); */
 }
 .notify-contain-a {
     width: 100%;
     /* height: 100vh; */
     position: fixed;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: flex-end;
-    z-index: 70;
+    z-index: 2;
     opacity: 0%;
     transition: .5s;
-    /* transform: translateY(-100%); */
+    top: 0%;
+    pointer-events: none;
+    /* transform: translateY(300%); */
 }
 
 
@@ -593,7 +611,7 @@ h1 {
     width: 68vw;
     position: fixed;
     transform: translateY(-10%);
-    /* z-index: 70; */
+    z-index: 70;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -602,5 +620,68 @@ h1 {
 .add-notify h1 {
     font-size: 1.5vw;
     font-family: "Graphik Web Regular";
+}
+
+.feat-hov-msg {
+    /* width: 74%; */
+    width: 100%;
+    
+    margin-left: 7%;
+    margin-bottom: 2%;
+    display: flex;
+    align-items: baseline;
+    transform: translateY(-46%) translateX(-12.5%);
+}
+
+.feat-hov-msg-b {
+
+    width: 132%;
+    margin-left: 7%;
+    margin-bottom: 2%;
+    display: flex;
+    align-items: baseline;
+    transform: translateY(-46%) translateX(-9%);
+}
+
+.feat-msg {
+    /* transform: translateY(-25%); */
+    opacity: 0%;
+    /* transition: .5s; */
+}
+
+.feat-msg-b {
+
+    /* transform: translateY(-25%); */
+    opacity: 100%;
+    transition: .5s;
+}
+
+.feat-notify-contain {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 56;
+    opacity: 100%;
+    transition: .5s;
+    top: 0%;
+    transform: translateX(-7%);
+    pointer-events: none;
+}
+.feat-notify-contain-a {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: none;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 56;
+    opacity: 0%;
+    transition: .5s;
+    top: 0%;
+    transform: translateX(-7%);
+    pointer-events: none;
 }
 
