--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -16,9 +16,16 @@ html, body {
     overflow: hidden;
 }
 
+.app-background-a {
+    background-color: #010116;
+    position: relative;
+    min-height: 1000px;
+    overflow-x: hidden;
+}
 .app-background {
     background-color: #010116;
-    height: 2000px;
+    position: absolute;
+    min-height: 1000px;
     overflow-x: hidden;
 }
 
@@ -518,4 +525,35 @@ html, body {
     /* transform: translateY(-10vw); */
 }
 
+.sub-items2 {
+    position: absolute;
+    transform: translateY(21vw);
+    z-index: 5;
+    
+}
 
+.sub-items2 ul{
+
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    z-index: 2;
+    padding: 0;
+    /* transform: translateY(-23%); */
+    margin-left: 3%;
+    margin-right: 3%;
+    list-style: none;
+}
+
+.sub-items2 img {
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-size: center;
+    width: 100%;
+    height: 100%;
+   
+}
