--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -552,3 +552,32 @@ html, body {
     height: 100%;
    
 }
+
+.feats2-notify-contain {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 8;
+    opacity: 100%;
+    transition: .5s;
+    top: 0%;
+    pointer-events: none;
+    /* transform: translateY(-10vw); */
+}
+.feats2-notify-contain-a {
+    width: 100%;
+    /* height: 100vh; */
+    position: fixed;
+    display: none;
+    justify-content: center;
+    align-items: flex-end;
+    z-index: 8;
+    opacity: 0%;
+    transition: .5s;
+    top: 0%;
+    pointer-events: none;
+    /* transform: translateY(-10vw); */
+}
