--- a/app/assets/stylesheets/api/content_page.css
+++ b/app/assets/stylesheets/api/content_page.css
@@ -10,7 +10,7 @@
 
 .content-back {
     background-color: #010116;
-    min-height: 100vh;
+    min-height: calc(100vh);
     width: 100%;
     z-index: -4;
     overflow: hidden;
