--- a/app/assets/stylesheets/api/signup.css
+++ b/app/assets/stylesheets/api/signup.css
@@ -12,7 +12,7 @@
 
 .signup-background {
     background-color: #021623;
-    height: 200vh;
+    min-height: 100vh;
     padding-bottom: 12%;
     position: absolute;
     z-index: -1;
@@ -60,6 +60,12 @@
     width: 100%;
 }
 
+.signup-form-container {
+    position: absolute;
+    width: 100%;
+    height: 120%;
+    background-color: #021623;
+}
 
 .signup-form-container :not(.signup-btn) {
     display: flex;
@@ -82,7 +88,7 @@
 
 .signup-form {
     position: absolute;
-    z-index: -1;
+    z-index: 1;
     left: 50px;
     right: 50px;
 }
