no search pre final css touchup 3

--- a/app/assets/stylesheets/api/movies_index.css
+++ b/app/assets/stylesheets/api/movies_index.css
@@ -432,6 +432,10 @@ html, body {
     position: absolute;
 }
 
+.non-click-plus img:hover {
+    cursor: pointer;
+}
+
 #non-info-appear {
     opacity: 0%;
 }
